innerText is undefined in this case in Firefox.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <textarea id="domElem" class="code" readonly=true cols=41 rows=5>
   var $obj = $('#jsLinks li').first();
 
-> console.log($obj[0].innerText);</textarea>
+> console.log($obj[0].textContent);</textarea>
         </p>
 
         <h3>Differences between remove and detach jQuery methods</h3>
