Add more spans.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
           class="code">remove()</span>, but keeps the stored data and events
           associated with the matched elements.
         <p><span class="code">$(element).hide()</span> sets the matched
-          elements' CSS display property to none.
+          elements' CSS <span class="code">display</span> property to
+          <span class="code">'none'</span>.
 
         <h3>Computed style</h3>
         <p>To read the actual property after CSS and styles are applied, the
