Remove async from loading listener.js to avoid a race with script.js. Merge three css files into one.

--- a/ie8/index.html
+++ b/ie8/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../stylesheet.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-    <link rel="stylesheet" type="text/css" href="../listener.css"/>
-    <link rel="stylesheet" type="text/css" href="../flexbox.css" />
     <link rel="shortcut icon" href="../favicon.ico" />
     <title>Internet Explorer 8</title>
   </head>
@@ -115,7 +113,7 @@
     </p>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script async src="../listener.js"></script>
+    <script src="../listener.js"></script>
     <script async src="script.js"></script>
   </body>
 </html>
