--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-    <link rel="stylesheet" type="text/css" href="listener.css"/>
-    <link rel="stylesheet" type="text/css" href="flexbox.css" />
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Notes on Foundations of JavaScript</title>
   </head>
@@ -304,7 +302,7 @@
     <script
       src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     </script>
-    <script async src="listener.js"></script>
+    <script src="listener.js"></script>
     <script async src="script.js"></script>
   </body>
 </html>
