Fix notes on dev tools.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <td class="data">⌥⌘I</td>
           </tr>
           <tr>
-            <td class="head">Safari <sup>(*1)</sup></td>
+            <td class="head">Safari&nbsp;<sup>(*1)</sup></td>
             <td class="default">⌥⌘C</td>
             <td class="data">⌥⌘I</td>
           </tr>
