--- a/ie8/index.html
+++ b/ie8/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=8">
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../stylesheet.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     <link rel="shortcut icon" href="../favicon.ico" />
     <title>Internet Explorer 8</title>
   </head>
-  <body>
+  <body><a id="topOfPage"></a>
     <table border="0" cellspacing="0">
     <tr><td colspan="2" class="fakewrapper header" width="100%">
       <h3>Internet Explorer 8</h3>
@@ -115,6 +115,7 @@
     </td><td class="fakewrapper aside-2"></td></tr>
     <tr><td colspan="2" class="fakewrapper footer" width="100%">
       <p>
+        <p><a href="#topOfPage">↑ Back to top</a></p>
         <small>Changes last made on <span id="timestamp"></span></small>
       </p>
     </td></tr>
