--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Notes on Foundations of JavaScript</title>
   </head>
-  <body>
+  <body><a id="topOfPage"></a>
     <div class="wrapper">
-      <header class="header"><h3>Notes on Foundations of JavaScript</h3></header>
+      <header class="header">
+        <h3>Notes on Foundations of JavaScript</h3>
+      </header>
       <aside class="aside aside-1">
 
         <h3>Pages</h3>
@@ -342,8 +345,16 @@
             >jQuery Quick API Reference</a></li>
         </ul>
 
+        <h3>Other links</h3>
+        <ul id="otherLinks">
+          <li><a target="_blank" href=
+            "http://caniuse.com/"
+            >Can I use __ ?</a></li>
+        </ul>
+
       </aside>
       <footer class="footer">
+        <p><a href="#topOfPage">↑ Back to top</a></p>
         <p><small>Changes last made on <span id="timestamp"></span></small></p>
       </footer>
     </div>
