Fix perf on start; preload all images on start but still delay load most but the default on initial page load. Add remove class instead of changing url.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <div id="floor">
           <div id="mouse"></div>
         </div>
-        <div id="play" class="button">Play</div>
+        <div id="play" class="button">Play</div><span
+          id="mouse-preload"></span>
 
         <h3>Browser developer tools</h3>
         <p>⌥⌘I (as in <u>I</u>nspect Element?) is a useful keyboard shortcut
