Add JavaScript weekly.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       </aside>
       <article class="main"><a id="article"></a>
 
+        <h3 id="jsweekly">JavaScript Weekly</h3>
+        <ul id="jsweekly-links"></ul>
+        <div id="jsweekly-latest-content"></div>
+
         <h3>jQuery Ajax, JSONP and Handlebars</h3>
         <p>Title of a movie to search for: <input id="movie-title"
           type="text"></p>
