Add a link. Reject deferred on error so that always gets called on that case.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       <article class="main"><a id="article"></a>
 
         <h3 id="jsweekly">JavaScript Weekly</h3>
-        <ul id="jsweekly-links"></ul>
+        <ul id="jsweekly-links">
+          <li>Loading...</li>
+        </ul>
         <div id="jsweekly-latest-content"></div>
 
         <h3>jQuery Ajax, JSONP and Handlebars</h3>
@@ -406,6 +408,9 @@
           <li><a target="_blank" href=
             "http://caniuse.com/"
             >Can I use __ ?</a></li>
+          <li><a target="_blank" href=
+            "http://www.programmableweb.com/category/all/apis?data_format=21173"
+            >ProgrammableWeb</a></li>
         </ul>
 
       </aside>
