Add notes on starting localhost server.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
         </ul>
         <div id="jsweekly-latest-content"></div>
 
+        <h3>Alias for starting localhost server</h3>
+        <ol>
+          <li>Add <span class="code">alias server='open http://localhost:8000
+            &amp;&amp; python -m SimpleHTTPServer'</span> to <span
+            class="code">.bash_profile</span></li>
+          <li>Open a new Terminal window</li>
+          <li><span class="code">cd</span> to a project folder with <span
+            class="code">index.html</span>, scripts and all other files</li>
+          <li><span class="code">server</span></li>
+        </ol>
+
         <h3>jQuery Ajax, JSONP and Handlebars</h3>
         <p>Title of a movie to search for: <input id="movie-title"
           type="text"></p>
