Fix static contents.

--- a/ie8/index.html
+++ b/ie8/index.html
@@ -39,7 +39,7 @@
     <p><span class="code">'input'</span> and <span
       class="code">'change'</span> form events are supported in IE9 and
       up.</p>
-    <p>Add to the grocery list: <input id="grocery" type="text" /></p>
+    <p>Add to the grocery list: <input id="grocery" type="text" disabled></p>
     <div id="input1" class="listener">input<br>(jQuery)</div>
     <div id="input2" class="listener">input<br>(DOM Listener)</div>
     <div id="input3" class="listener">oninput<br>(DOM Handler)</div>
