--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
       </aside>
       <article class="main"><a id="article"></a>
 
-        <h3 id="jsweekly">JavaScript Weekly</h3>
-        <ul id="jsweekly-links">
-          <li>Loading...</li>
-        </ul>
+        <h3 id="jsweekly"><a href="http://javascriptweekly.com/"
+          target="_blank">JavaScript Weekly</a></h3>
+        <ul id="jsweekly-links"><li></li></ul>
         <div id="jsweekly-latest-content"></div>
 
         <h3>Alias for starting localhost server</h3>
@@ -50,8 +49,8 @@
         </ol>
 
         <h3>jQuery Ajax, JSONP and Handlebars</h3>
-        <p>Title of a movie to search for: <input id="movie-title"
-          type="text"></p>
+        <p>Title of a movie to search for: <input id="movie-title" 
+          maxlength=140 type="text" disabled></p>
         <ul id="movies">
           <script id="movies-template" type="text/x-handlebars-template">
             {{#each Search}}
@@ -89,7 +88,7 @@
           class="code">$(document).height()</span> returns the height of
           the document including contents not visible outside of the window
           viewport.</p>
-        <div id="floor" class="notouch">
+        <div id="floor" class="js notouch">
           <div id="mouse" class="notouch"></div>
         </div>
         <div id="play" class="button">Play</div><span
@@ -97,11 +96,13 @@
 
         <h3>Hit testing</h3>
         <p>Hit testing in document coordinates works better than in element
-          (the wood floor in this case) coordinates. Click events on the
-          floor above are handled using <span class="code">event.pageX</span>
-          | <span class="code">pageY</span>, hit tested against the mouse
-          element location <span class="code">$(element).offset().left</span>
-          | <span class="code">top</span> or <span
+          <span class="js">(the wood floor in this case) </span>coordinates.
+          Click events <span class="js">on the floor above </span>are handled
+          using <span class="code">event.pageX</span> | <span
+          class="code">pageY</span>, hit tested against <span class="js">the
+          mouse </span>element location <span
+          class="code">$(element).offset().left</span> | <span
+          class="code">top</span> or <span
           class="code">element.offsetLeft</span> | <span
           class="code">offsetTop</span>. Event offsets <span
           class="code">event.offsetX</span> | <span
@@ -181,8 +182,8 @@
         </p>
 
         <h3>Memoization in Closure</h3>
-        <p>Fibonacci( <input id="fibn" type="text" size=5 maxlength=4> ) =
-          <span id="fibans">?</span></p>
+        <p>Fibonacci( <input id="fibn" type="text" size=5 maxlength=4
+          disabled> ) = <span id="fibans">?</span></p>
         <p>
           <textarea class="code" readonly=true cols=41 rows=19>
   var fibonacci = function() {
