--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
           <li><span class="code">server</span></li>
         </ol>
 
+        <h3>Getting cross-domain XML response</h3>
+        <p>Requesting XML from a cross-domain source is not allowed because
+          of the same-origin policy. The RSS feed from <a
+          href="http://javascriptweekly.com/" target="_blank">JavaScript
+          Weekly site</a> is downloaded as a JSONP response using <a
+          href="https://developers.google.com/feed/v1/jsondevguide#using_json"
+          target="_blank">Google Ajax Load Feed API</a>.</p>
+
         <h3>jQuery Ajax, JSONP and Handlebars</h3>
         <p>Title of a movie to search for: <input id="movie-title" 
           maxlength=140 type="text" disabled></p>
@@ -421,8 +429,14 @@
             "http://caniuse.com/"
             >Can I use __ ?</a></li>
           <li><a target="_blank" href=
+            "http://handlebarsjs.com/"
+            >Handlebars</a></li>
+          <li><a target="_blank" href=
             "http://www.programmableweb.com/category/all/apis?data_format=21173"
             >ProgrammableWeb</a></li>
+          <li><a target="_blank" href=
+            "https://developers.google.com/feed/v1/jsondevguide#using_json"
+            >Google Feed API</a></li>
         </ul>
 
       </aside>
