Add a node.js link.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           target="_blank">Google Ajax Load Feed API</a>.</p>
 
         <h3>jQuery Ajax, JSONP and Handlebars</h3>
-        <p>Title of a movie to search for: <input id="movie-title" 
+        <p>Title of a movie to search for: <input id="movie-title"
           maxlength=140 type="text" disabled></p>
         <ul id="movies">
           <script id="movies-template" type="text/x-handlebars-template">
@@ -403,6 +403,13 @@
           <li><a target="_blank" href=
             "http://www.smashingmagazine.com/2009/02/08/50-extremely-useful-javascript-tools/"
             >50 Useful JavaScript Tools</a></li>
+        </ul>
+
+        <h3>Node.js links</h3>
+        <ul id="nodeLinks">
+          <li><a target="_blank" href=
+            "http://www.nodebeginner.org/"
+            >The Node Beginner Book</a></li>
         </ul>
 
         <h3>jQuery links</h3>
