--- a/index.html
+++ b/index.html
@@ -433,6 +433,12 @@
         <h3>Other links</h3>
         <ul id="otherLinks">
           <li><a target="_blank" href=
+            "https://cdnjs.com/"
+            >CDN for JavaScript and CSS</a></li>
+          <li><a target="_blank" href=
+            "http://devdocs.io/"
+            >DevDocs</a></li>
+          <li><a target="_blank" href=
             "http://caniuse.com/"
             >Can I use __ ?</a></li>
           <li><a target="_blank" href=
