--- a/index.html
+++ b/index.html
@@ -403,6 +403,9 @@
           <li><a target="_blank" href=
             "http://www.smashingmagazine.com/2009/02/08/50-extremely-useful-javascript-tools/"
             >50 Useful JavaScript Tools</a></li>
+          <li><a target="_blank" href=
+            "https://www.codefellows.org/blog/a-list-of-foundational-javascript-tools"
+            >A List of Foundational JavaScript Tools</a></li>
         </ul>
 
         <h3>Node.js links</h3>
@@ -410,6 +413,9 @@
           <li><a target="_blank" href=
             "http://www.nodebeginner.org/"
             >The Node Beginner Book</a></li>
+          <li><a target="_blank" href=
+            "https://docs.nodejitsu.com/"
+            >docs.nodejitsu.com</a></li>
         </ul>
 
         <h3>jQuery links</h3>
