--- a/index.html
+++ b/index.html
@@ -414,6 +414,9 @@
             "http://www.nodebeginner.org/"
             >The Node Beginner Book</a></li>
           <li><a target="_blank" href=
+            "http://nodeschool.io/"
+            >nodeschool.io</a></li>
+          <li><a target="_blank" href=
             "https://docs.nodejitsu.com/"
             >docs.nodejitsu.com</a></li>
         </ul>
