--- a/src/index.html
+++ b/src/index.html
@@ -269,7 +269,7 @@
     function(mutations) {
       mutations.forEach(function(m) {
         for (var i = 0;
-          i < m.addedNodes.length;
+          i &lt; m.addedNodes.length;
           i++)
         {
           console.log(m.addedNodes[i]);
