--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       </aside>
       <article class="main"><a id="article"></a>
 
-        <h3 id="jsweekly"><a href="http://javascriptweekly.com/"
+        <h3 id="jsweekly" class="pinned"><a href="http://javascriptweekly.com/"
           target="_blank">JavaScript Weekly</a></h3>
         <ul id="jsweekly-links"><li></li></ul>
         <div id="jsweekly-latest-content"></div>
