--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <p>A few lines of code runs a localhost server (<span
           class="code">open http://localhost:8000 &amp;&amp;
           <a href="http://nodemon.io/" target="_blank">nodemon</a>
-          server</span>), foundation of <a href="http://expressjs.com/"
+          server.js</span>), foundation of <a href="http://expressjs.com/"
           target="_blank">Express</a> <a href="http://nodejs.org/"
           target="_blank">Node.js</a> web applications and server side
           JavaScript.</p>
