Fix unmatched tags found by minification.

--- a/src/index.html
+++ b/src/index.html
@@ -192,10 +192,10 @@
           the matched elements.</p>
         <p><span class="code">$(element).detach()</span> is like <span
           class="code">remove()</span>, but keeps the stored data and events
-          associated with the matched elements.
+          associated with the matched elements.</p>
         <p><span class="code">$(element).hide()</span> sets the matched
           elements' CSS <span class="code">display</span> property to
-          <span class="code">'none'</span>.
+          <span class="code">'none'</span>.</p>
 
         <h3>Computed style</h3>
         <p>To read the actual property after CSS and styles are applied, the
