--- a/src/index.html
+++ b/src/index.html
@@ -501,6 +501,9 @@
           <li><a target="_blank" href=
             "https://developers.google.com/feed/v1/jsondevguide#using_json"
             >Google Feed API</a></li>
+          <li><a target="_blank" href=
+            "http://heroku.com/"
+            >Heroku</a></li>
         </ul>
 
       </aside>
