--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,19 @@
         <ul id="jsweekly-links"><li></li></ul>
         <div id="jsweekly-latest-content"></div>
 
+        <h3>Coding Interviews in JavaScript</h3>
+        <p>Using JavaScript, it is relatively easier to code for moderate
+          to hard coding interview questions which you may not get asked
+          too often when using C++ for example because the answer is
+          unlikely to fit in the required time of an interview.
+          A couple of examples:</p>
+        <ul>
+          <li>Hash table data structure is available natively as built-in
+            <span class="code">Object</span></li>
+          <li>Elegant way of declaring a cache in Closure for Dynamic
+            Programming</li>
+        </ul>
+
         <h3>Differences in parseInt(string) and Number(string)</h3>
         <table>
           <tr>
