Now I can consume my own API :)

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,9 @@
             >IE8</a></li>
         </ul>
 
+        <h3><a id="tempf" target="_blank"
+          href="https://coldenoughtostorebeeroutside.herokuapp.com/"
+          title="Is it cold enough to store my beer outside?"></a></h3>
       </aside>
       <article class="main"><a id="article"></a>
 
