Add a few more conditions.

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,14 @@
             >IE8</a></li>
         </ul>
 
-        <h3><a id="tempf" target="_blank"
-          href="https://coldenoughtostorebeeroutside.herokuapp.com/"
-          title="Is it cold enough to store my beer outside?"></a></h3>
+        <p>
+          <div><img id="icon" class="wudata"></div>
+          <div><a id="tempf" target="_blank" class="wudata"
+            href="https://coldenoughtostorebeeroutside.herokuapp.com/"
+            title="Is it cold enough to store my beer outside?"></a></div>
+          <div id="precip" class="wudata"></div>
+          <div id="wind" class="wudata"></div>
+        </p>
       </aside>
       <article class="main"><a id="article"></a>
 
