Make them non-static including the paragraph.

--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
             >IE8</a></li>
         </ul>
 
-        <p>
-          <div><img id="icon" class="wudata"></div>
-          <div><a id="tempf" target="_blank" class="wudata"
+        <p class="js wudata">
+          <div><img id="icon" class="js wudata"></div>
+          <div><a id="tempf" target="_blank" class="js wudata"
             href="https://coldenoughtostorebeeroutside.herokuapp.com/"
             title="Is it cold enough to store my beer outside?"></a></div>
-          <div id="precip" class="wudata"></div>
-          <div id="wind" class="wudata"></div>
+          <div id="precip" class="js wudata"></div>
+          <div id="wind" class="js wudata"></div>
         </p>
       </aside>
       <article class="main"><a id="article"></a>
