Refactor stylesheet.scss

--- a/src/index.html
+++ b/src/index.html
@@ -571,6 +571,9 @@
           <li><a target="_blank" href=
             "http://heroku.com/"
             >Heroku</a></li>
+          <li><a target="_blank" href=
+            "http://sassmeister.com/"
+            >SassMeister</a></li>
         </ul>
 
       </aside>
