--- a/src/index.html
+++ b/src/index.html
@@ -506,6 +506,9 @@
           <li><a target="_blank" href=
             "https://www.codefellows.org/blog/a-list-of-foundational-javascript-tools"
             >A List of Foundational JavaScript Tools</a></li>
+          <li><a target="_blank" href=
+            "http://devchat.tv/js-jabber/109-jsj-dependency-injection-in-javascript-with-vojtda-jina-misko-hevery"
+            >JavaScript Jabber</a></li>
         </ul>
 
         <h3>Node.js links</h3>
