Add Angular links.

--- a/src/index.html
+++ b/src/index.html
@@ -549,6 +549,22 @@
             >jQuery Quick API Reference</a></li>
         </ul>
 
+        <h3>Angular.js links</h3>
+        <ul id="angularLinks">
+          <li><a target="_blank" href=
+            "https://docs.angularjs.org/guide"
+            >Guide to AngularJS Documentation</a></li>
+          <li><a target="_blank" href=
+            "https://docs.angularjs.org/api"
+            >AngularJS API Docs</a></li>
+          <li><a target="_blank" href=
+            "https://egghead.io/"
+            >Egghead.io</a></li>
+          <li><a target="_blank" href=
+            "https://thinkster.io/angulartutorial/a-better-way-to-learn-angularjs/"
+            >A Better Way to Learn AngularJS</a></li>
+        </ul>
+
         <h3>Other links</h3>
         <ul id="otherLinks">
           <li><a target="_blank" href=
