--- a/src/index.html
+++ b/src/index.html
@@ -507,6 +507,9 @@
           <li><a target="_blank" href=
             "http://devchat.tv/js-jabber/109-jsj-dependency-injection-in-javascript-with-vojtda-jina-misko-hevery"
             >JavaScript Jabber</a></li>
+          <li><a target="_blank" href=
+            "https://leanpub.com/understandinges6/read"
+            >Understanding ECMAScript 6</a></li>
         </ul>
 
         <h3>Node.js links</h3>
