--- a/src/index.html
+++ b/src/index.html
@@ -564,8 +564,8 @@
             "https://egghead.io/"
             >Egghead.io</a></li>
           <li><a target="_blank" href=
-            "https://thinkster.io/angulartutorial/a-better-way-to-learn-angularjs/"
-            >A Better Way to Learn AngularJS</a></li>
+            "http://blog.ivanstorck.com/top-5-resources-for-learning-angularjs/"
+            >Top 5 Resources For Learning AngularJS</a></li>
         </ul>
 
         <h3>Other links</h3>
