Add links and a note.

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,20 @@
         <ul id="jsweekly-links"><li></li></ul>
         <div id="jsweekly-latest-content"></div>
 
+        <h3>Innovations around single page web applications</h3>
+        <ul>
+          <li>jQuery</li>
+          <li>Backbone.js, Grunt, Require.js and Handlebars</li>
+          <li>Angular 1.x, Gulp and Browserify</li>
+          <li>React, Flux and Browserify</li>
+          <li>Angular 2.0 (with Web Components and ECMAScript 6)</li>
+        </ul>
+        <ul>
+          <li>Imperative model to declarative model</li>
+          <li>Solution to cascading imperative state changes</li>
+          <li>Legacy browsers to modern browsers</li>
+        </ul>
+
         <h3>Empty object is truthy</h3>
         <p>JSON object is in the request body. It has an <span
           class="code">id</span> property. Process the request by the ID.
@@ -73,7 +87,7 @@
           unlikely to fit in the required time of an interview.
           A couple of examples:</p>
         <ul>
-          <li>Hash table data structure is available natively as built-in
+          <li>Hash table like data structure is available natively as built-in
             <span class="code">Object</span></li>
           <li>Elegant way of declaring a cache in Closure for Dynamic
             Programming</li>
@@ -566,6 +580,12 @@
           <li><a target="_blank" href=
             "http://blog.ivanstorck.com/top-5-resources-for-learning-angularjs/"
             >Top 5 Resources For Learning AngularJS</a></li>
+          <li><a target="_blank" href=
+            "https://www.youtube.com/watch?v=gNmWybAyBHI"
+            >Angular 2.0 Core at ng-europe 2014</a></li>
+          <li><a target="_blank" href=
+            "https://www.airpair.com/angularjs/posts/preparing-for-the-future-of-angularjs"
+            >Preparing for the future of AngularJS</a></li>
         </ul>
 
         <h3>Other links</h3>
