Bootstrap angular app.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Notes on Foundations of JavaScript</title>
   </head>
   <body><a id="topOfPage"></a>
-    <div class="wrapper">
+    <div class="wrapper" data-ng-app="webapp">
       <header class="header">
         <h3>Notes on Foundations of JavaScript</h3>
       </header>
