Reorganize js files and move left aside sections into directives.

--- a/src/index.html
+++ b/src/index.html
@@ -14,34 +14,13 @@
       <header class="header">
         <h3>Notes on Foundations of JavaScript</h3>
       </header>
+
       <aside class="aside aside-1">
-
-        <section>
-          <h3>Pages</h3>
-          <ul id="pageList">
-            <li><a target="_self" href=
-              "#article"
-              >Home</a></li>
-            <li><a target="_self" href=
-              "#aside-2"
-              >Links</a></li>
-            <li><a target="_self" href=
-              "ie8/"
-              >IE8</a></li>
-          </ul>
-        </section>
-
-        <section>
-          <div><img id="icon" class="js wudata"></div>
-          <div><a id="tempf" target="_blank" class="js wudata"
-            href="https://coldenoughtostorebeeroutside.herokuapp.com/"
-            title="Is it cold enough to store my beer outside?"></a></div>
-          <div id="precip" class="js wudata"></div>
-          <div id="wind" class="js wudata"></div>
-        </section>
+        <section data-aside-pages></section>
+        <section data-aside-wudata></section>
       </aside>
-      <article class="main"><a id="article"></a>
 
+      <article class="main"><a id="article"></a>
         <section>
           <h3 id="jsweekly" class="pinned"><a href="http://javascriptweekly.com/"
             target="_blank">JavaScript Weekly</a></h3>
