--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,7 @@
         <section data-aside-angular-links></section>
         <section data-aside-other-links></section>
       </aside>
-      <footer class="footer">
-        <p><a href="#topOfPage">↑ Back to top</a></p>
-        <p><small>Changes last made on <span id="timestamp"></span></small></p>
-      </footer>
+      <footer class="footer" data-footer></footer>
     </div>
     <script
       src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js">
