Add a new style class to handle the display on load.

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
       <header class="header">
         <h3>Notes on Foundations of JavaScript</h3>
       </header>
-      <aside class="aside aside-1">
+      <aside class="aside aside-1 delayed">
         <section data-aside-pages></section>
       </aside>
-      <article class="main"><a id="article"></a>
+      <article class="main delayed"><a id="article"></a>
         <section data-article-js-weekly></section>
         <section data-article-innovations-spa></section>
         <section data-article-empty-obj-is-truthy></section>
@@ -44,14 +44,14 @@
         <section data-article-objects-by-ref></section>
         <section data-article-ie8></section>
       </article>
-      <aside class="aside aside-2"><a id="aside-2"></a>
+      <aside class="aside aside-2 delayed"><a id="aside-2"></a>
         <section data-aside-js-links></section>
         <section data-aside-node-links></section>
         <section data-aside-jq-links></section>
         <section data-aside-angular-links></section>
         <section data-aside-other-links></section>
       </aside>
-      <footer class="footer" data-footer></footer>
+      <footer class="footer delayed" data-footer></footer>
     </div>
     <script
       src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js">
