--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +15,7 @@
     <title>Notes on Foundations of JavaScript</title>
   </head>
   <body><a id="topOfPage"></a>
-    <div class="wrapper" data-ng-app="webapp">
+    <div class="wrapper" data-ng-app="webApp">
       <header class="header">
         <h3>Notes on Foundations of JavaScript</h3>
       </header>
