--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,6 @@
     <script
       src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js">
     </script>
-    <script async src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
