Workaround one instance of long standing issue with border-radius. Prefer jquery.corner to css3pie in this case.

--- a/src/ie8/index.html
+++ b/src/ie8/index.html
@@ -131,6 +131,9 @@
     </td></tr>
     </table>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!--[if lt IE 9]>
+    <script src="http://cdn.jsdelivr.net/jquery.corner/2.13/jquery.corner.js"></script>
+    <![endif]-->
     <script async src="script.js"></script>
   </body>
 </html>
