--- a/src/ie8/index.html
+++ b/src/ie8/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../stylesheet.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+    <!--[if lt IE 9]>
+    <link rel="stylesheet" type="text/css" href="ie8.css"/>
+    <![endif]-->
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <title>Internet Explorer 8</title>
