--- a/public/ie8/index.html
+++ b/public/ie8/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../stylesheet.css">
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="ie8.css"/><![endif]-->
 <link rel="icon" type="image/png" href="/images/favicon.png">
 <link rel="shortcut icon" href="/images/favicon.ico">
 <title>Internet Explorer 8</title>
@@ -105,6 +106,7 @@
 </td></tr>
 </table>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!--[if lt IE 9]><script src="http://cdn.jsdelivr.net/jquery.corner/2.13/jquery.corner.js"></script><![endif]-->
 <script async src="script.js"></script>
 </body>
 </html>
