--- a/src/ie8/index.html
+++ b/src/ie8/index.html
@@ -125,7 +125,41 @@
         ><li><img></li><li><img></li><li><img></li><li><img></li></ul>
     </div>
 
-    </td><td class="fakewrapper aside-2"></td></tr>
+    </td><td class="fakewrapper aside-2">
+
+    <div>
+      <h3>References</h3>
+      <ul id="ie8Links">
+        <li><a target="_blank" href=
+          "http://www.amazon.com/gp/product/1118531647/"
+          >JavaScript and JQuery</a>
+        </li>
+        <li><a target="_blank" href=
+          "http://www.quirksmode.org/css/condcom.html"
+          >Conditional comments</a>
+        </li>
+        <li><a target="_blank" href=
+          "http://css3pie.com/"
+          >CSS3 PIE</a>
+        </li>
+        <li><a target="_blank" href=
+          "http://jquery.malsup.com/corner/"
+          >jQuery Corner</a> (<a target="_blank" href=
+          "http://www.jsdelivr.com/#!jquery.corner"
+          >CDN</a>)
+        </li>
+        <li><a target="_blank" href=
+          "https://github.com/aFarkas/html5shiv"
+          >html5shiv</a>
+        </li>
+        <li><a target="_blank" href=
+          "https://github.com/scottjehl/Respond"
+          >Respond.js</a>
+        </li>
+      </ul>
+    </div>
+
+    </td></tr>
     <tr><td colspan="2" class="fakewrapper footer" width="100%">
       <p>
         <p><a href="#topOfPage">↑ Back to top</a></p>
