--- a/src/ie8/index.html
+++ b/src/ie8/index.html
@@ -131,6 +131,10 @@
       <h3>References</h3>
       <ul id="ie8Links">
         <li><a target="_blank" href=
+          "http://support.microsoft.com/gp/Microsoft-Internet-Explorer"
+          >Internet Explorer Support Lifecycle Policy</a>
+        </li>
+        <li><a target="_blank" href=
           "http://www.amazon.com/gp/product/1118531647/"
           >JavaScript and JQuery</a>
         </li>
