--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="UTF-8">
@@ -14,6 +14,11 @@
       <header class="header">
         <h3>Notes on Foundations of JavaScript</h3>
       </header>
+      <!--[if IE]>
+      <h3><a target="_blank" href="http://support.microsoft.com/gp/Microsoft-Internet-Explorer">
+        <span style="color:red">Internet Explorer Support Lifecycle Policy</span></a>
+      </h3>
+      <![endif]-->
       <aside class="aside aside-1 delayed">
         <section data-aside-pages></section>
       </aside>
