--- a/public/ie8/index.html
+++ b/public/ie8/index.html
@@ -101,6 +101,8 @@
 <div>
 <h3>References</h3>
 <ul id="ie8Links">
+<li><a target="_blank" href="http://support.microsoft.com/gp/Microsoft-Internet-Explorer">Internet Explorer Support Lifecycle Policy</a>
+</li>
 <li><a target="_blank" href="http://www.amazon.com/gp/product/1118531647/">JavaScript and JQuery</a>
 </li>
 <li><a target="_blank" href="http://www.quirksmode.org/css/condcom.html">Conditional comments</a>
