--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,13 @@
     <link rel="shortcut icon" href="/images/favicon.ico" />
     <title>Notes on Foundations of JavaScript</title>
   </head>
-  <body><a id="topOfPage"></a>
+  <body>
+    <![if !IE]>
+    <a id="topOfPage"></a>
     <div class="wrapper" data-ng-app="webApp">
       <header class="header">
         <h3>Notes on Foundations of JavaScript</h3>
       </header>
-      <!--[if IE]>
-      <h3><a target="_blank" href="http://support.microsoft.com/gp/Microsoft-Internet-Explorer">
-        <span style="color:red">Internet Explorer Support Lifecycle Policy</span></a>
-      </h3>
-      <![endif]-->
       <aside class="aside aside-1 delayed">
         <section data-aside-pages></section>
       </aside>
@@ -62,5 +59,11 @@
       src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js">
     </script>
     <script src="script.js"></script>
+    <![endif]>
+    <!--[if IE]>
+    <h3><a target="_blank" href="http://support.microsoft.com/gp/Microsoft-Internet-Explorer">
+      <span style="color:red">Internet Explorer Support Lifecycle Policy</span></a>
+    </h3>
+    <![endif]-->
   </body>
 </html>
