--- a/src/private/scroll04.html
+++ b/src/private/scroll04.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body style="margin: 0px">
-    <img style="position: fixed; width: 100%; height: 100%" src="dark_1366x854_01_prog.jpg"/>
-    <div style="position:relative; height: 3000px; background-color: yellow; width: 160px">
-      <div style="position: relative; z-index: 1; height: 140px"></div>
+    <img id="img1" src="dark_1366x854_01_prog.jpg" style="
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      "/>
+    <div id="div1" style="
+      position:relative;
+      height: 3000px;
+      background-color: yellow;
+      width: 160px;
+      ">
+      <div id="div2" style="
+        position: relative;
+        z-index: 1;
+        height: 140px;
+        ">
+      </div>
     </div>
-    <div style="top: 0px; position: absolute">
-      <img src="bottomImage.jpg" />
+    <div id="div3" style="
+      top: 0px;
+      position: absolute;
+      ">
+      <img id="img2" src="bottomImage.jpg" />
     </div>
   </body>
 </html>
