--- a/src/private/index.html
+++ b/src/private/index.html
@@ -20,6 +20,10 @@
         style="text-decoration: none;">BillPay reduction</a></li>
       <li><a href="scroll07.html"
         style="text-decoration: none;">Scroll event callbacks</a></li>
+      <li><a href="scroll08.html"
+        style="text-decoration: none;">NegZ repro</a></li>
+      <li><a href="scroll08.html"
+        style="text-decoration: none;">NegZ not repro (opacity zero)</a></li>
     </ul>
   </body>
 </html>
