--- a/src/private/index.html
+++ b/src/private/index.html
@@ -23,7 +23,7 @@
       <li><a href="scroll08.html"
         style="text-decoration: none;">NegZ repro</a></li>
       <li><a href="scroll09.html"
-        style="text-decoration: none;">NegZ not repro (opacity zero)</a></li>
+        style="text-decoration: none;">NegZ not visible (opacity zero)</a></li>
     </ul>
   </body>
 </html>
