--- a/src/private/index.html
+++ b/src/private/index.html
@@ -9,7 +9,7 @@
       <li><a href="scroll01.html"
         style="text-decoration: none;">My Yahoo reduction</a></li>
       <li><a href="scroll02.html"
-        style="text-decoration: none;">My Yahoo reduction (simplified)</a></li>
+        style="text-decoration: none;">My Yahoo reduction (fixed bg case only)</a></li>
       <li><a href="scroll03.html"
         style="text-decoration: none;">My Yahoo reduction (not repro)</a></li>
       <li><a href="scroll06.html"
