--- a/src/private/index.html
+++ b/src/private/index.html
@@ -24,6 +24,8 @@
         style="text-decoration: none;">NegZ repro</a></li>
       <li><a href="scroll09.html"
         style="text-decoration: none;">NegZ not visible (opacity zero)</a></li>
+      <li><a href="scroll10.html"
+        style="text-decoration: none;">Has fixed descendants with a clipping ancestor below the viewport</a></li>
     </ul>
   </body>
 </html>
