--- a/src/private/scroll10.html
+++ b/src/private/scroll10.html
@@ -57,8 +57,7 @@
                 <h2 style="
                   font-size: 45px;
                   color: #ffffff;
-                  ">Fixed element</h2>
-                <p>with a clipping ancestor below the viewport</p>
+                  ">Fixed Element</h2>
               </div>
             </div>
           </div>
